update bookmarks or pins feature
